--- a/test/fixtures/affairs.yml
+++ b/test/fixtures/affairs.yml
@@ -34,6 +34,7 @@
 #  journal_entry_id :integer
 #  lock_version     :integer          default(0), not null
 #  third_id         :integer          not null
+#  third_role       :string(255)      not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer
 #
@@ -50,6 +51,7 @@
 #   debit: 0
 #   id: 1
 #   third_id: 1
+#   third_role: "Lorem ipsum"
 #   updated_at: 2013-10-26 18:34:04 +02:00
 #   updater_id: 1
 #
@@ -63,6 +65,7 @@ affairs_001:
   debit: 0
   id: 1
   third_id: 1
+  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -75,6 +78,7 @@ affairs_002:
   debit: 411.23
   id: 2
   third_id: 1
+  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -87,6 +91,7 @@ affairs_003:
   debit: 158
   id: 3
   third_id: 1
+  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -99,6 +104,7 @@ affairs_004:
   debit: 158
   id: 4
   third_id: 1
+  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -111,6 +117,7 @@ affairs_005:
   debit: 1158
   id: 5
   third_id: 1
+  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
