--- a/test/fixtures/gaps.yml
+++ b/test/fixtures/gaps.yml
@@ -25,14 +25,17 @@
 #  affair_id        :integer          not null
 #  amount           :decimal(19, 4)   default(0.0), not null
 #  created_at       :datetime         not null
+#  created_on       :date             not null
 #  creator_id       :integer
 #  currency         :string(3)        not null
 #  direction        :string(255)      not null
 #  entity_id        :integer          not null
+#  entity_role      :string(255)      not null
 #  id               :integer          not null, primary key
 #  journal_entry_id :integer
 #  lock_version     :integer          default(0), not null
 #  number           :string(255)      not null
+#  pretax_amount    :decimal(19, 4)   default(0.0), not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer
 #
@@ -43,12 +46,15 @@
 #   affair_id: 1
 #   amount: 0
 #   created_at: 2013-10-26 18:34:04 +02:00
+#   created_on: 2013-10-26
 #   creator_id: 1
 #   currency: "Lorem ipsum"
 #   direction: "Lorem ipsum"
 #   entity_id: 1
+#   entity_role: "Lorem ipsum"
 #   id: 1
 #   number: "Lorem ipsum"
+#   pretax_amount: 0
 #   updated_at: 2013-10-26 18:34:04 +02:00
 #   updater_id: 1
 #
@@ -57,10 +63,12 @@ gaps_001:
   affair_id: 1
   amount: 0.53
   created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2005-07-19
   creator_id: 1
   currency: "EUR"
   direction: "profit"
   entity_id: 1
+  entity_role: client
   id: 1
   number: "G001"
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -70,10 +78,12 @@ gaps_002:
   affair_id: 1
   amount: 0.17
   created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2005-04-01
   creator_id: 1
   currency: "EUR"
   direction: "loss"
   entity_id: 2
+  entity_role: client
   id: 2
   number: "G002"
   updated_at: 2009-07-19 19:13:59 +02:00
