--- a/test/fixtures/taxes.yml
+++ b/test/fixtures/taxes.yml
@@ -80,3 +80,16 @@ taxes_002:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
+taxes_003:
+  amount: 20
+  collect_account_id: 1
+  deduction_account_id: 1
+  created_at: 2014-01-01 08:34:04 +02:00
+  creator_id: 1
+  id: 3
+  included: false
+  name: "20% VAT"
+  computation_method: "percentage"
+  reductible: true
+  updated_at: 2014-01-01 08:34:04 +02:00
+  updater_id: 1
