--- a/test/fixtures/affairs.yml
+++ b/test/fixtures/affairs.yml
@@ -33,8 +33,9 @@
 #  id               :integer          not null, primary key
 #  journal_entry_id :integer
 #  lock_version     :integer          default(0), not null
+#  originator_id    :integer          not null
+#  originator_type  :string(255)      not null
 #  third_id         :integer          not null
-#  third_role       :string(255)      not null
 #  updated_at       :datetime         not null
 #  updater_id       :integer
 #
@@ -50,8 +51,9 @@
 #   deals_count: 0
 #   debit: 0
 #   id: 1
+#   originator_id: 1
+#   originator_type: "Lorem ipsum"
 #   third_id: 1
-#   third_role: "Lorem ipsum"
 #   updated_at: 2013-10-26 18:34:04 +02:00
 #   updater_id: 1
 #
@@ -64,8 +66,8 @@ affairs_001:
   currency: "EUR"
   debit: 0
   id: 1
+  originator: sales_001
   third_id: 1
-  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -77,8 +79,8 @@ affairs_002:
   currency: "EUR"
   debit: 411.23
   id: 2
+  originator: gaps_002
   third_id: 1
-  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -90,8 +92,8 @@ affairs_003:
   currency: "EUR"
   debit: 158
   id: 3
+  originator: sales_003
   third_id: 1
-  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -103,8 +105,8 @@ affairs_004:
   currency: "EUR"
   debit: 158
   id: 4
+  originator: incoming_payments_001
   third_id: 1
-  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -116,8 +118,8 @@ affairs_005:
   currency: "EUR"
   debit: 1158
   id: 5
+  originator: incoming_payments_003
   third_id: 1
-  third_role: client
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
