Cleans code after DB changes

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -16,6 +16,7 @@
 # - "backend/affairs#index"
 # - "backend/affairs#list"
 # - "backend/affairs#select"
+# - "backend/affairs#show"
 # - "backend/aggregators#index"
 # - "backend/aggregators#show"
 # - "backend/analytic_repartitions#create"
@@ -243,6 +244,7 @@
 # - "backend/gaps#edit"
 # - "backend/gaps#index"
 # - "backend/gaps#list"
+# - "backend/gaps#list_items"
 # - "backend/gaps#new"
 # - "backend/gaps#show"
 # - "backend/gaps#update"
