--- a/test/fixtures/affairs.yml
+++ b/test/fixtures/affairs.yml
@@ -33,6 +33,7 @@
 #  id               :integer          not null, primary key
 #  journal_entry_id :integer
 #  lock_version     :integer          default(0), not null
+#  number           :string(255)      not null
 #  originator_id    :integer          not null
 #  originator_type  :string(255)      not null
 #  third_id         :integer          not null
@@ -51,6 +52,7 @@
 #   deals_count: 0
 #   debit: 0
 #   id: 1
+#   number: "Lorem ipsum"
 #   originator_id: 1
 #   originator_type: "Lorem ipsum"
 #   third_id: 1
@@ -66,6 +68,7 @@ affairs_001:
   currency: "EUR"
   debit: 0
   id: 1
+  number: "A000001"
   originator: sales_001
   third_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -79,6 +82,7 @@ affairs_002:
   currency: "EUR"
   debit: 411.23
   id: 2
+  number: "A000002"
   originator: gaps_002
   third_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -92,6 +96,7 @@ affairs_003:
   currency: "EUR"
   debit: 158
   id: 3
+  number: "A000003"
   originator: sales_003
   third_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -105,6 +110,7 @@ affairs_004:
   currency: "EUR"
   debit: 158
   id: 4
+  number: "A000004"
   originator: incoming_payments_001
   third_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -118,6 +124,7 @@ affairs_005:
   currency: "EUR"
   debit: 1158
   id: 5
+  number: "A000005"
   originator: incoming_payments_003
   third_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
