--- a/test/fixtures/intervention_casts.yml
+++ b/test/fixtures/intervention_casts.yml
@@ -49,7 +49,7 @@
 #
 
 intervention_casts_001:
-  actor_id: 16003
+  actor: equipments_003
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
@@ -61,7 +61,7 @@ intervention_casts_001:
   updater_id: 1
 
 intervention_casts_002:
-  actor_id: 5003
+  actor: organic_matters_003
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
