--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -66,8 +66,7 @@ issues_001:
   observed_at: 2009-07-19 19:13:59 +02:00
   priority: 2
   state: "opened"
-  target_id: 7001
-  target_type: "Animal"
+  target: animals_001 (Animal)
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -81,7 +80,6 @@ issues_002:
   observed_at: 2009-07-19 19:13:59 +02:00
   priority: 2
   state: "opened"
-  target_id: 7001
-  target_type: "Animal"
+  target: animals_001 (Animal)
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
