introduce Guide (in progress)

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -248,6 +248,24 @@
 # - "backend/gaps#new"
 # - "backend/gaps#show"
 # - "backend/gaps#update"
+# - "backend/guide_indicator_data#create"
+# - "backend/guide_indicator_data#destroy"
+# - "backend/guide_indicator_data#edit"
+# - "backend/guide_indicator_data#index"
+# - "backend/guide_indicator_data#list"
+# - "backend/guide_indicator_data#new"
+# - "backend/guide_indicator_data#show"
+# - "backend/guide_indicator_data#unroll"
+# - "backend/guide_indicator_data#update"
+# - "backend/guides#create"
+# - "backend/guides#destroy"
+# - "backend/guides#edit"
+# - "backend/guides#index"
+# - "backend/guides#list"
+# - "backend/guides#new"
+# - "backend/guides#show"
+# - "backend/guides#unroll"
+# - "backend/guides#update"
 # - "backend/incoming_deliveries#list_items"
 # - "backend/incoming_deliveries#show"
 # - "backend/incoming_deliveries#unroll"
