--- a/db/tables.yml
+++ b/db/tables.yml
@@ -545,6 +545,48 @@ gaps:
   updated_at: {type: datetime, required: true}
   updater_id: {type: integer, references: user}
 
+guide_indicator_data:
+  aim: {type: string, required: true}
+  boolean_value: {type: boolean, required: true, default: false}
+  choice_value: {type: string}
+  created_at: {type: datetime, required: true}
+  creator_id: {type: integer, references: user}
+  decimal_value: {type: decimal, precision: 19, scale: 4}
+  derivative: {type: string}
+  geometry_value: {type: spatial}
+  guide_id: {type: integer, references: guide, required: true}
+  id: {type: integer, required: true}
+  indicator_datatype: {type: string, required: true}
+  indicator_name: {type: string, required: true}
+  lock_version: {type: integer, required: true, default: 0}
+  measure_value_unit: {type: string}
+  measure_value_value: {type: decimal, precision: 19, scale: 4}
+  multi_polygon_value: {type: spatial}
+  point_value: {type: spatial}
+  started_at: {type: datetime}
+  stopped_at: {type: datetime}
+  string_value: {type: text}
+  subject: {type: string}
+  updated_at: {type: datetime, required: true}
+  updater_id: {type: integer, references: user}
+
+guides:
+  active: {type: boolean, required: true, default: false}
+  created_at: {type: datetime, required: true}
+  creator_id: {type: integer, references: user}
+  description: {type: text}
+  id: {type: integer, required: true}
+  lock_version: {type: integer, required: true, default: 0}
+  name: {type: string}
+  number: {type: string}
+  picture_content_type: {type: string}
+  picture_file_name: {type: string}
+  picture_file_size: {type: integer}
+  picture_updated_at: {type: datetime}
+  reference_name: {type: string}
+  updated_at: {type: datetime, required: true}
+  updater_id: {type: integer, references: user}
+
 incoming_deliveries:
   address_id: {type: integer, references: entity_address}
   created_at: {type: datetime, required: true}
