Renames AnalyticRepartition with AnalyticDistribution

--- a/db/models.yml
+++ b/db/models.yml
@@ -3,7 +3,7 @@
 - account_balance
 - activity
 - affair
-- analytic_repartition
+- analytic_distribution
 - animal
 - animal_group
 - animal_medicine
