--- a/db/tables.yml
+++ b/db/tables.yml
@@ -73,7 +73,7 @@ affairs:
   updated_at: {type: datetime, required: true}
   updater_id: {type: integer, references: user}
 
-analytic_repartitions:
+analytic_distributions:
   affectation_percentage: {type: decimal, precision: 19, scale: 4, required: true}
   affected_on: {type: date, required: true}
   created_at: {type: datetime, required: true}
