Reviews guides and adds analyses history which is quite necessary for tracking

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -248,20 +248,14 @@
 # - "backend/gaps#new"
 # - "backend/gaps#show"
 # - "backend/gaps#update"
-# - "backend/guide_indicator_data#create"
-# - "backend/guide_indicator_data#destroy"
-# - "backend/guide_indicator_data#edit"
-# - "backend/guide_indicator_data#index"
-# - "backend/guide_indicator_data#list"
-# - "backend/guide_indicator_data#new"
-# - "backend/guide_indicator_data#show"
-# - "backend/guide_indicator_data#unroll"
-# - "backend/guide_indicator_data#update"
+# - "backend/guide_analyses#show"
+# - "backend/guide_analyses#unroll"
 # - "backend/guides#create"
 # - "backend/guides#destroy"
 # - "backend/guides#edit"
 # - "backend/guides#index"
 # - "backend/guides#list"
+# - "backend/guides#list_analyses"
 # - "backend/guides#new"
 # - "backend/guides#show"
 # - "backend/guides#unroll"
