--- a/db/tables.yml
+++ b/db/tables.yml
@@ -545,28 +545,28 @@ gaps:
   updated_at: {type: datetime, required: true}
   updater_id: {type: integer, references: user}
 
-guide_indicator_data:
-  aim: {type: string, required: true}
-  boolean_value: {type: boolean, required: true, default: false}
-  choice_value: {type: string}
+guide_analyses:
+  acceptance_status: {type: string, required: true}
   created_at: {type: datetime, required: true}
   creator_id: {type: integer, references: user}
-  decimal_value: {type: decimal, precision: 19, scale: 4}
-  derivative: {type: string}
-  geometry_value: {type: spatial}
+  execution_number: {type: integer, required: true}
   guide_id: {type: integer, references: guide, required: true}
   id: {type: integer, required: true}
-  indicator_datatype: {type: string, required: true}
-  indicator_name: {type: string, required: true}
   lock_version: {type: integer, required: true, default: 0}
-  measure_value_unit: {type: string}
-  measure_value_value: {type: decimal, precision: 19, scale: 4}
-  multi_polygon_value: {type: spatial}
-  point_value: {type: spatial}
-  started_at: {type: datetime}
-  stopped_at: {type: datetime}
-  string_value: {type: text}
-  subject: {type: string}
+  started_at: {type: datetime, required: true}
+  stopped_at: {type: datetime, required: true}
+  updated_at: {type: datetime, required: true}
+  updater_id: {type: integer, references: user}
+
+guide_analysis_points:
+  acceptance_status: {type: string, required: true}
+  advice_reference_name: {type: string}
+  analysis_id: {type: integer, references: guide_analysis, required: true}
+  created_at: {type: datetime, required: true}
+  creator_id: {type: integer, references: user}
+  id: {type: integer, required: true}
+  lock_version: {type: integer, required: true, default: 0}
+  reference_name: {type: string, required: true}
   updated_at: {type: datetime, required: true}
   updater_id: {type: integer, references: user}
 
@@ -574,16 +574,17 @@ guides:
   active: {type: boolean, required: true, default: false}
   created_at: {type: datetime, required: true}
   creator_id: {type: integer, references: user}
-  description: {type: text}
+  external: {type: boolean, required: true, default: false}
+  frequency: {type: string, required: true}
   id: {type: integer, required: true}
   lock_version: {type: integer, required: true, default: 0}
-  name: {type: string}
-  number: {type: string}
-  picture_content_type: {type: string}
-  picture_file_name: {type: string}
-  picture_file_size: {type: integer}
-  picture_updated_at: {type: datetime}
+  name: {type: string, required: true}
+  nature: {type: string, required: true}
   reference_name: {type: string}
+  reference_source_content_type: {type: string}
+  reference_source_file_name: {type: string}
+  reference_source_file_size: {type: integer}
+  reference_source_updated_at: {type: datetime}
   updated_at: {type: datetime, required: true}
   updater_id: {type: integer, references: user}
 
