--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -49,28 +49,32 @@
 #   used_for_affairs: true
 #   used_for_gaps: true
 #
----
+
 journals_001:
   closed_on: 2007-06-30
-  code: XYZ
+  code: VOP
   creator: users_001
   currency: EUR
-  name: Xyz journal
+  name: Various operations
   nature: various
   updater: users_001
+  used_for_affairs: true
+  used_for_gaps: true
+
 journals_002:
   closed_on: 2009-07-19
-  code: ABC
+  code: BNK
   creator: users_001
   currency: EUR
-  name: Abc journal
-  nature: various
+  name: Bank
+  nature: bank
   updater: users_001
+
 journals_003:
   closed_on: 2007-06-30
   code: SAL
   creator: users_001
   currency: EUR
-  name: Sales journal
+  name: Sales
   nature: sales
   updater: users_001
