--- a/config/rights.yml
+++ b/config/rights.yml
@@ -119,7 +119,9 @@
 # - "backend/buildings#picture"
 # - "backend/buildings#unroll"
 # - "backend/calculators#index"
+# - "backend/calculators/nitrogen_inputs#edit"
 # - "backend/calculators/nitrogen_inputs#show"
+# - "backend/calculators/nitrogen_inputs#update"
 # - "backend/campaigns#create"
 # - "backend/campaigns#destroy"
 # - "backend/campaigns#edit"
@@ -239,17 +241,11 @@
 # - "backend/events#unroll"
 # - "backend/financial_assets#unroll"
 # - "backend/financial_years#unroll"
-# - "backend/gaps#create"
-# - "backend/gaps#destroy"
-# - "backend/gaps#edit"
 # - "backend/gaps#index"
 # - "backend/gaps#list"
 # - "backend/gaps#list_items"
-# - "backend/gaps#new"
 # - "backend/gaps#show"
-# - "backend/gaps#update"
 # - "backend/guide_analyses#show"
-# - "backend/guide_analyses#unroll"
 # - "backend/guides#create"
 # - "backend/guides#destroy"
 # - "backend/guides#edit"
