Adds dummy data generation for guides during runs with warning notification

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -245,6 +245,7 @@
 # - "backend/gaps#list"
 # - "backend/gaps#list_items"
 # - "backend/gaps#show"
+# - "backend/guide_analyses#list_points"
 # - "backend/guide_analyses#show"
 # - "backend/guides#create"
 # - "backend/guides#destroy"
@@ -253,6 +254,7 @@
 # - "backend/guides#list"
 # - "backend/guides#list_analyses"
 # - "backend/guides#new"
+# - "backend/guides#run"
 # - "backend/guides#show"
 # - "backend/guides#unroll"
 # - "backend/guides#update"
