Adds coproducer to ProductBirth for mixings

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -216,8 +216,10 @@
 # - "backend/documents#show"
 # - "backend/documents#update"
 # - "backend/entities#unroll"
+# - "backend/entity_addresses#index"
 # - "backend/entity_addresses#show"
 # - "backend/entity_addresses#unroll"
+# - "backend/entity_links#index"
 # - "backend/entity_links#show"
 # - "backend/equipments#list_carried_linkages"
 # - "backend/equipments#list_carrier_linkages"
@@ -679,10 +681,12 @@
 # - "backend/products#show"
 # - "backend/products#unroll"
 # - "backend/products#update"
+# - "backend/purchase_items#index"
 # - "backend/purchase_items#show"
 # - "backend/purchase_natures#unroll"
 # - "backend/purchases#unroll"
 # - "backend/roles#unroll"
+# - "backend/sale_items#index"
 # - "backend/sale_items#show"
 # - "backend/sale_natures#unroll"
 # - "backend/sales#unroll"
