Introduces ProductJunction in replacement of ProductBirth/ProductDeath

--- a/db/models.yml
+++ b/db/models.yml
@@ -84,14 +84,21 @@
 - prescription
 - product
 - product_birth
+- product_consumption
+- product_creation
 - product_death
+- product_division
 - product_enjoyment
 - product_group
 - product_indicator_datum
+- product_junction
+- product_junction_way
 - product_linkage
 - product_localization
 - product_measurement
 - product_membership
+- product_merging
+- product_mixing
 - product_nature
 - product_nature_category
 - product_nature_variant
