--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -21,59 +21,53 @@
 #
 # == Table: products
 #
-#  address_id               :integer
-#  born_at                  :datetime
-#  category_id              :integer          not null
-#  content_indicator_name   :string(255)
-#  content_indicator_unit   :string(255)
-#  content_maximal_quantity :decimal(19, 4)   default(0.0), not null
-#  content_nature_id        :integer
-#  created_at               :datetime         not null
-#  creator_id               :integer
-#  dead_at                  :datetime
-#  default_storage_id       :integer
-#  derivative_of            :string(120)
-#  description              :text
-#  father_id                :integer
-#  financial_asset_id       :integer
-#  id                       :integer          not null, primary key
-#  identification_number    :string(255)
-#  initial_born_at          :datetime
-#  initial_container_id     :integer
-#  initial_enjoyer_id       :integer
-#  initial_owner_id         :integer
-#  initial_population       :decimal(19, 4)   default(0.0)
-#  initial_shape            :spatial({:srid=>
-#  lock_version             :integer          default(0), not null
-#  mother_id                :integer
-#  name                     :string(255)      not null
-#  nature_id                :integer          not null
-#  number                   :string(255)      not null
-#  parent_id                :integer
-#  picture_content_type     :string(255)
-#  picture_file_name        :string(255)
-#  picture_file_size        :integer
-#  picture_updated_at       :datetime
-#  reservoir                :boolean          not null
-#  tracking_id              :integer
-#  type                     :string(255)
-#  updated_at               :datetime         not null
-#  updater_id               :integer
-#  variant_id               :integer          not null
-#  variety                  :string(120)      not null
-#  work_number              :string(255)
+#  address_id            :integer
+#  born_at               :datetime
+#  category_id           :integer          not null
+#  created_at            :datetime         not null
+#  creator_id            :integer
+#  dead_at               :datetime
+#  default_storage_id    :integer
+#  derivative_of         :string(120)
+#  description           :text
+#  financial_asset_id    :integer
+#  id                    :integer          not null, primary key
+#  identification_number :string(255)
+#  initial_born_at       :datetime
+#  initial_container_id  :integer
+#  initial_dead_at       :datetime
+#  initial_enjoyer_id    :integer
+#  initial_father_id     :integer
+#  initial_mother_id     :integer
+#  initial_owner_id      :integer
+#  initial_population    :decimal(19, 4)   default(0.0)
+#  initial_shape         :spatial({:srid=>
+#  lock_version          :integer          default(0), not null
+#  name                  :string(255)      not null
+#  nature_id             :integer          not null
+#  number                :string(255)      not null
+#  parent_id             :integer
+#  picture_content_type  :string(255)
+#  picture_file_name     :string(255)
+#  picture_file_size     :integer
+#  picture_updated_at    :datetime
+#  tracking_id           :integer
+#  type                  :string(255)
+#  updated_at            :datetime         not null
+#  updater_id            :integer
+#  variant_id            :integer          not null
+#  variety               :string(120)      not null
+#  work_number           :string(255)
 #
 #
 # == Fixture: products
 #
 # products_001:
 #   category: categories_001
-#   content_maximal_quantity: 0
 #   creator: users_001
 #   name: "Lorem ipsum"
 #   nature: natures_001
 #   number: "Lorem ipsum"
-#   reservoir: true
 #   updater: users_001
 #   variant: variants_001
 #   variety: "Lorem ipsum"
@@ -145,6 +139,7 @@ animal_medicines_003:
   updater: users_001
   variant: product_nature_variants_001
   variety: animal_medicine
+
 animals_001:
   category: product_nature_categories_001
   creator: users_001
@@ -156,6 +151,7 @@ animals_001:
   updater: users_001
   variant: product_nature_variants_001
   variety: bos
+
 animals_002:
   category: product_nature_categories_001
   creator: users_001
@@ -167,6 +163,7 @@ animals_002:
   updater: users_001
   variant: product_nature_variants_001
   variety: bos
+
 animals_003:
   category: product_nature_categories_001
   creator: users_001
@@ -178,6 +175,7 @@ animals_003:
   updater: users_001
   variant: product_nature_variants_001
   variety: gallus
+
 animals_004:
   category: product_nature_categories_001
   creator: users_001
@@ -189,6 +187,19 @@ animals_004:
   updater: users_001
   variant: product_nature_variants_007
   variety: bos
+
+animals_005:
+  category: product_nature_categories_001
+  creator: users_001
+  identification_number: A7005
+  name: Hélico
+  nature: product_natures_001
+  number: '7005'
+  type: Animal
+  updater: users_001
+  variant: product_nature_variants_007
+  variety: bos
+
 building_divisions_001:
   category: product_nature_categories_001
   creator: users_001
